clusters/lab/bootstrap/argocd/install/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app.kubernetes.io/managed-by: argocd
    home-lab.rboiko.com/gateway-scope: private
